--- a/core.vcxproj
+++ b/core.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="src\rendering\surface.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\rendering\animation.hpp" />
     <ClInclude Include="src\rendering\camera.hpp" />
     <ClInclude Include="src\rendering\sprite_drawable.hpp" />
     <ClInclude Include="src\rendering\mesh.hpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="src\rendering\sprite.hpp" />
     <ClInclude Include="src\rendering\surface.hpp" />
     <ClInclude Include="src\rendering\vertex.hpp" />
+    <ClInclude Include="src\time.hpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="assets\shaders\default_ps.hlsl">
